# ppdl

./: .buildinfo  .gitignore  README.html  README.md  _config.yml  _toc.yml  genindex.html  index.html  intro.html  intro.md  objects.inv  requirements.txt  search.html  searchindex.js  setup.py
_sources/: README.md  intro.md
_static/: fix_static.sh  spectre.min.css  xglobal.css
anims/: README.html  README.md
content/: 01.01 - LAB 01 - Warmup.html  01.01 - NOTES 01 - Probabilistic programming, a simple example.html  01.01 - NOTES 01 - Probabilistic programming, a simple example.ipynb  01.02 - LAB 01 - Warmup.html  01.02 - LAB 01 - Warmup.ipynb  02-01 - LAB 01 - Marginals, conditionals and joints.ipynb  02.01 - LAB 01 - Low level Tensorflow.html  02.01 - LAB 01 - Low level Tensorflow.ipynb  02.01 - LAB 01 - Tensorflow model subclassing.html  02.01 - LAB 01 - Tensorflow model subclassing.ipynb  02.01 - LAB 01- test.ipynb  02.01 - LAB 02 - Low level Tensorflow.html  02.01 - LAB 02 - Low level Tensorflow.ipynb  02.01 - LAB 02 - Tensorflow model subclassing.html  02.01 - LAB 02 - Tensorflow model subclassing.ipynb  02.01 - NOTES 01 - Linear regression black box optimization.html  02.01 - NOTES 01 - Linear regression black box optimization.ipynb  02.01 - NOTES 01 - Simbolic computing for ML.html  02.01 - NOTES 01 - Simbolic computing for ML.ipynb  02.01 - NOTES 01 - test.html  02.01 - NOTES 01 - test.ipynb  02.01 - NOTES 02 - test2.html  (+320 more)
package/: README.html  howto-publish.html  pyproject.toml  requirements.txt  setup.py
package/ppdl/: __init__.py  samplers.py
package/ppml/: plots.py
(+287 files in other folders)
