[tool.poetry]
name = "ppdl"
version = "0.1.4"
description = "Source code for probabilistic deep learning course."
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
numpy = "^1.22.2"
progressbar2 = "^4.0.0"
sympy = "^1.9"
rlxutils = "^0.1.7"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "juselara-jfrog"
url = "https://juselara.jfrog.io/artifactory/api/pypi/juselara-pypi"
secondary = true

[[tool.poetry.source]]
name = "default"
url = "https://pypi.org/simple"
default = true
