[tool.poetry]
name = "ppml"
version = "0.1.0"
description = "Source code for probabilistic deep learning course."
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.6.3"
simpy = "^4.0.1"
rlxutils = "^0.1.10"
progressbar2 = "^4.2.0"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
ipython = "^8.0.1"

[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"
ipython = "^8.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "juselara-jfrog"
url = "https://juselara.jfrog.io/artifactory/api/pypi/juselara-pypi"
secondary = true

[[tool.poetry.source]]
name = "default"
url = "https://pypi.org/simple"
default = true
